<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExpensePlanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addclaim">Add a Claim</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="edit_claim">Edit Claim</string>
    <string name="add_expense">Add an Expense</string>
    <string name="temp">Temporary Value</string>
    <string name="cost">Cost</string>
    <string name="claim_title">Claim Title</string>
    <string name="title_activity_claim_creator">ClaimCreatorActivity</string>
    <string name="title_activity_claim_editor">ClaimEditorActivity</string>
    <string name="title_activity_expense_creator">ExpenseCreator</string>
    <string name="start">Start Date</string>
    <string name="end">End Date</string>
    <string name="title_activity_expense_manager">ExpenseManagerActivity</string>

</resources>
