<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

	<Button
	    android:id="@+id/submitClaim"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:text="@string/submit" />

	<EditText
	    android:id="@+id/claimNameEditText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:ems="10"
	    android:hint="@string/name" >

	    <requestFocus />
	</EditText>

	<EditText
	    android:id="@+id/claimCategoryEditText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/claimNameEditText"
	    android:ems="10"
	    android:hint="@string/category" />

	<EditText
	    android:id="@+id/claimDescriptionEditText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/claimCategoryEditText"
	    android:ems="10"
	    android:hint="@string/description"
	    android:maxLines="4"
	    android:inputType="textMultiLine" />
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/claimDescriptionEditText"
	    android:layout_above="@+id/submitClaim">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    >
			<TextView
			    android:id="@+id/startDate"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textStyle="bold"
			    android:text="@string/start"/>
			<DatePicker
			    android:id="@+id/claimStartDatePicker"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:calendarViewShown="false" 
			    android:layout_gravity="center" />
			<TextView
			    android:id="@+id/endDate"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textStyle="bold"
			    android:text="@string/end"/>
			<DatePicker
			    android:id="@+id/claimEndDatePicker"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:calendarViewShown="false" 
			    android:layout_gravity="center"/>
		</LinearLayout>

	</ScrollView>
</RelativeLayout>
