<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#dddddd">

    <EditText
        android:id="@+id/expenseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/category" >

    </EditText>

	<LinearLayout
	    android:id="@+id/currencyLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/expenseDescription"
	    android:orientation="horizontal" >

	    <EditText
	        android:id="@+id/expenseCost"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.70"
	        android:ems="10"
	        android:hint="@string/cost"
	        android:inputType="numberDecimal" />
	
	    <Spinner
	        android:id="@+id/currencySelector"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content" 
	        android:layout_weight="0.3"
	        android:spinnerMode="dialog"
	        />
	</LinearLayout>


	<EditText
	    android:id="@+id/expenseDescription"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/expenseName"
	    android:ems="10"
	    android:hint="@string/description"
	    android:inputType="textMultiLine"
	    android:maxLines="4" />

	<Button
	    android:id="@+id/submitExpense"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:text="@string/submit" />

	<DatePicker
	    android:id="@+id/expenseDate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/currencyLayout"
	    android:layout_centerHorizontal="true"
	    android:calendarViewShown="false" />

</RelativeLayout>
